--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v2.2.3
     hooks:
       - id: check-executables-have-shebangs
       - id: check-json
@@ -22,19 +22,17 @@ repos:
       - id: requirements-txt-fixer
       - id: trailing-whitespace
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.14.1
+    rev: v0.17.0
     hooks:
       - id: markdownlint
-        # The LICENSE.md must match the license text exactly for
-        # GitHub's autorecognition fu to work, so we should leave it
-        # alone.
-        exclude: LICENSE.md
+        args:
+          - --config=.mdl_config.json
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.15.0
+    rev: v1.16.0
     hooks:
       - id: yamllint
   - repo: https://github.com/detailyang/pre-commit-shell
-    rev: 1.0.4
+    rev: 1.0.5
     hooks:
       - id: shell-lint
   - repo: https://gitlab.com/pycqa/flake8
@@ -44,14 +42,16 @@ repos:
         additional_dependencies:
           - flake8-docstrings
   - repo: https://github.com/asottile/pyupgrade
-    rev: v1.14.0
+    rev: v1.19.0
     hooks:
       - id: pyupgrade
   - repo: https://github.com/PyCQA/bandit
-    rev: 2a1dbab
+    rev: 1.6.1
     hooks:
       - id: bandit
-  - repo: https://github.com/ambv/black
+        args:
+          - --config=.bandit.yml
+  - repo: https://github.com/python/black
     rev: 19.3b0
     hooks:
       - id: black
@@ -61,16 +61,15 @@ repos:
       - id: ansible-lint
         # files: molecule/default/playbook.yml
   - repo: https://github.com/antonbabenko/pre-commit-terraform.git
-    rev: v1.11.0
+    rev: v1.12.0
     hooks:
       - id: terraform_fmt
       - id: terraform_validate_no_variables
-      - id: terraform_docs
   - repo: https://github.com/IamTheFij/docker-pre-commit
     rev: v1.0.0
     hooks:
       - id: docker-compose-check
   - repo: https://github.com/prettier/prettier
-    rev: 1.16.2
+    rev: 1.18.2
     hooks:
       - id: prettier
